--- a/src/components/Hero.css
+++ b/src/components/Hero.css
@@ -8,7 +8,7 @@
 
 .hero:before {
     content: '';
-    background: url('./images/hero.jpg') no-repeat center center/cover;
+    background: url('./images/coverr.jpg') no-repeat center center/cover;
     height: 100%;
     width: 100%;
     position: absolute;
@@ -50,14 +50,14 @@
 .hero .button {
     margin: 1rem 0;
     width: 300px;
-    background-color: var(--secondary-color);
-    border: 1px solid var(--secondary-color);
-    color: #333;
+    background-color: #978D58;
+    border: 1px solid #978D58;
+    color: whitesmoke;
 }
 
 .hero .button:hover {
-    background-color: var(--secondary-dark);
-    border: 1px solid var(--secondary-dark);
+    background-color: #0B5269;
+    border: 1px solid wheat;
 }
 
 @media screen and (max-width:940px) {
