--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -7,7 +7,7 @@
     z-index: 1;
     transition: .3s ease-in;
     overflow: hidden;
-    background-color: rgba(0,0,0,.9);
+    background-color: #0B5269;
 }
 
 .header .navbar {
@@ -25,7 +25,7 @@
 }
 
 .header .navbar img {
-    width: 250px;
+    width: 100px;
     height: auto;
 }
 
@@ -40,7 +40,7 @@
 
 .header .nav-item a:hover {
     padding-bottom: 12px;
-    border-bottom: 3px solid var(--secondary-color);
+    border-bottom: 3px solid whitesmoke;
 }
 
 .hamburger {
@@ -51,7 +51,7 @@
 @media screen and (max-width:940px) {
     .header {
         max-width: 100%;
-        background-color: rgba(0,0,0,.9);
+        background-color: #0B5269;
     }
 
     .header .navbar {
@@ -67,7 +67,7 @@
         left: -100%;
         top: 90px;
         flex-direction: column;
-        background-color: rgba(0,0,0,.9);
+        background-color: #0B5269;
         width: 100%;
         height: 90vh;
         z-index: 999;
@@ -84,7 +84,8 @@
     }
 
     .header .navbar img {
-        width: 150px;
+        width: 80px;
+        margin-left: -22px;
     }
 }
 
